force-app/main/default/objects/pse__Utilization__c/fields/pse__Batch_Deletion_Cutoff__c.field-meta.xml
<CustomField>
    <fullName>pse__Batch_Deletion_Cutoff__c</fullName>
    <defaultValue>99000</defaultValue>
    <description>When deleting previous utilization calculations, sets the maximum number of child records above which a batch deletion is used instead of cascading deletion.</description>
    <inlineHelpText>Sets the maximum number of child records above which a batch deletion is used instead of cascading deletion.</inlineHelpText>
    <label>Batch Deletion Cut-Off Point</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>