force-app/main/default/objects/pse__Utilization__c/fields/pse__CustomFiltersforUnheldRRUtilization__c.field-meta.xml
<CustomField>
    <fullName>pse__CustomFiltersforUnheldRRUtilization__c</fullName>
    <description>Controls the fields on the Resource Request object to include for utilization calculations of unheld resource requests. This setting accepts field values in SOQL queries. You can add custom Resource Request fields as valid values to this setting. For example, Staffer_Approval_Required__c = true AND Update_Related_Resource_Requests__c = true AND Custom_Approval__c = true. If not defined, unheld resource request utilization calculations use default criteria.</description>
    <inlineHelpText>Controls the fields on the Resource Request object to include for utilization calculations of unheld resource requests. This setting accepts custom and standard field values in SOQL queries. If not defined, calculations use default criteria.</inlineHelpText>
    <label>Custom Filters for Unheld RR Utilization</label>
    <type>TextArea</type>
</CustomField>