force-app/main/default/objects/pse__Utilization__c/fields/pse__Use_Last_Date_on_Resource__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Last_Date_on_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, utilization details do not calculate before the Start Date or beyond the Last Date on the resource.</description>
    <inlineHelpText>When true, utilization details do not calculate before the Start Date or beyond the Last Date on the resource.</inlineHelpText>
    <label>Use Start Date and Last Date on Resource</label>
    <type>Checkbox</type>
</CustomField>