force-app/main/default/objects/pse__Utilization__c/fields/pse__Utilization_Engine_Max_Range__c.field-meta.xml
<CustomField>
    <fullName>pse__Utilization_Engine_Max_Range__c</fullName>
    <defaultValue>365</defaultValue>
    <description>Maximum number of days into the future for which to maintain real time utilization data</description>
    <inlineHelpText>Maximum number of days into the future for which to maintain real time utilization data</inlineHelpText>
    <label>Utilization Engine Max Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>